[gd_scene load_steps=5 format=3 uid="uid://m1243oocw1o4"]

[ext_resource type="Script" path="res://scripts/player_character.gd" id="1_23gut"]
<<<<<<< Updated upstream
[ext_resource type="PackedScene" uid="uid://dfwudva2dnrp8" path="res://assets/models/rubber_duck/rubber_duck_toy_2k.gltf" id="2_lando"]
[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="2_mqs0j"]
=======
[ext_resource type="ArrayMesh" uid="uid://ig0oaay5jbdt" path="res://assets/models/GameCube - SSX 3 - Snowskate/Snowskate.obj" id="4_cwaf5"]
[ext_resource type="PackedScene" uid="uid://cia8bj1cy57ts" path="res://assets/models/Eddie/Eddie.fbx" id="5_473ku"]
>>>>>>> Stashed changes

[sub_resource type="SphereShape3D" id="SphereShape3D_qh1u2"]
radius = 0.151594

[node name="PlayerCharacter" type="CharacterBody3D"]
script = ExtResource("1_23gut")
max_speed = 10.0
jump_vel = 5.0
cam_speed = 0.03

<<<<<<< Updated upstream
[node name="AudioManager" type="Node3D" parent="."]
script = ExtResource("2_mqs0j")

[node name="FmodBankLoader" type="FmodBankLoader" parent="AudioManager"]
bank_paths = ["res://Movement_Controller_Volume_FMOD/Build/Desktop/Master.strings.bank", "res://Movement_Controller_Volume_FMOD/Build/Desktop/Master.bank", "res://Movement_Controller_Volume_FMOD/Build/Desktop/Ambience.bank", "res://Movement_Controller_Volume_FMOD/Build/Desktop/Music.bank", "res://Movement_Controller_Volume_FMOD/Build/Desktop/SFX.bank"]

[node name="EventEmitterAmbience" type="FmodEventEmitter3D" parent="AudioManager"]
event_name = "event:/Ambience"
event_guid = "{d37af55b-1726-4671-966a-3ac3c8d940ec}"
autoplay = true

[node name="EventEmitterMusic" type="FmodEventEmitter3D" parent="AudioManager"]
event_name = "event:/Music"
event_guid = "{c42db5e0-c86b-4254-ab16-379bec26e668}"
autoplay = true

[node name="EventEmitterCharacter" type="FmodEventEmitter3D" parent="AudioManager"]
event_name = "event:/Character Sound"
event_guid = "{1df554b6-be1d-4933-a5e7-43ceac4cbb14}"
autoplay = true
event_parameter/SpeedVolume/id = 7538124305779807749
event_parameter/SpeedVolume/value = 1.0
event_parameter/SpeedVolume/min_value = 0.0
event_parameter/SpeedVolume/max_value = 1.0
event_parameter/SpeedVolume/default_value = 0.0
event_parameter/SpeedVolume/variant_type = 3

[node name="FmodListener3D" type="FmodListener3D" parent="AudioManager"]

[node name="RubberDuckModel" parent="." instance=ExtResource("2_lando")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

=======
>>>>>>> Stashed changes
[node name="CollisionSphere" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.132635, 0)
shape = SubResource("SphereShape3D_qh1u2")

[node name="CameraTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59548, 1.79019)

[node name="CamLookTarget" type="Node3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
top_level = true

[node name="Camera3D" type="Camera3D" parent="."]
top_level = true
<<<<<<< Updated upstream
v_offset = 0.2

[connection signal="started" from="AudioManager/EventEmitterCharacter" to="AudioManager" method="_on_event_emitter_character_started"]
=======

[node name="Snowskate" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.97018e-10, 0, 0.00450725, 0, 0.00450725, 0, -0.00450725, 0, -1.97018e-10, 0, 0, 0)
mesh = ExtResource("4_cwaf5")

[node name="Eddie" parent="." instance=ExtResource("5_473ku")]
transform = Transform3D(-1.37435e-10, 0, 0.00314414, 0, 0.00314414, 0, -0.00314414, 0, -1.37435e-10, 0, 0.313852, 0)
>>>>>>> Stashed changes
